package logic;

// Represents an entity that can be upgraded
public interface Upgradable {
    void upgrade();
}
